# lamber-report

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/components/: projects.tsx  test-session-environment.tsx  test-session-statistic.tsx  test-session-testcases-common.tsx  test-session-testcases.tsx  test-sessions.tsx  testcase-explorer.tsx  testcase-helper-attachments.tsx  testcase-helper-histories.tsx  testcase-helper.tsx  testcase-landing.tsx  testcase-sourcecode.tsx
frontend/lib/: data-provider.ts  utils.tsx
frontend/pages/: _document.tsx  index.tsx
frontend/pages/project/: index.tsx
frontend/pages/test_session/: index.tsx
frontend/pages/testcase/: index.tsx
frontend/styles/: globals.css
lamber_report/: __init__.py
