[project]
name = "lamber-report"
dynamic = ["version"]
description = "Serve lamber report."
readme = "README.md"
authors = [{ name = "yaomeng", email = "luizyao@163.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lamber_report = "lamber_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lamber_report"]

[tool.hatch.version]
path = "lamber_report/__init__.py"

